src/assets/css/App.css
:root {
  --gutter-size: 20px;
}

html {
  font-size: 16px;
}

body {
  overflow-x: hidden;
  font-family: "Fira Sans", Helvetica, Arial, sans-serif;
  margin: 0;
}

*, *:before, *:after {
  box-sizing: border-box;
}

a {
  text-decoration: none;
}
a:focus-visible {
  outline: 2px solid black;
  outline-offset: 2px;
}

h1, h2, h3, h4, h5, h6 {
  letter-spacing: -0.7px;
}

p {
  line-height: 1.5;
}
p a {
  text-decoration: underline;
  color: #1a30ac;
}

.container {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}
@media screen and (max-width: 1250px) {
  .container {
    width: 90%;
  }
}

.about-container {
  width: 100%;
  max-width: 600px;
  margin: 50px auto 0 auto;
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 100px auto;
}
.about-container .about-pic {
  position: relative;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  -webkit-animation: photoFadeIn 0.3s ease-in;
          animation: photoFadeIn 0.3s ease-in;
  -webkit-animation-iteration-count: 1;
          animation-iteration-count: 1;
  -webkit-animation-fill-mode: forwards;
          animation-fill-mode: forwards;
  -webkit-animation-delay: 1s;
          animation-delay: 1s;
  opacity: 0;
}
.about-container .about-pic img {
  position: absolute;
  bottom: 20px;
  width: 100%;
  max-width: 450px;
}
@media screen and (max-width: 1250px) {
  .about-container {
    width: 90%;
  }
}
.about-container h1 {
  margin-bottom: 3rem;
}
.about-container .hi {
  margin-bottom: 0;
  font-size: 25px;
  font-weight: 500;
}
.about-container .thanks {
  margin-top: 50px;
  font-size: 20px;
  font-weight: 500;
}

header {
  width: 100%;
  display: inline-flex;
  justify-content: center;
  height: 60px;
  margin-bottom: 100px;
}
@media screen and (max-width: 600px) {
  header {
    background: #fff;
    z-index: 9;
  }
}
header .container {
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
}
header .logo {
  font-family: "DM Serif Display", Georgia, "Times New Roman", Times, serif;
  color: #000;
  font-size: 30px;
  position: relative;
  height: 24px;
  line-height: 24px;
}
header nav ul {
  display: inline-flex;
  align-items: center;
  list-style-type: none;
  gap: 20px;
  padding: 0;
  margin: 0;
  height: 100%;
}
header nav ul li {
  display: contents;
  height: 100%;
}
header nav ul a {
  color: #333;
  position: relative;
  height: 24px;
  line-height: 150%;
}
header nav ul a:hover, header nav ul a:focus-visible {
  -webkit-text-decoration: underline 2px solid #666;
          text-decoration: underline 2px solid #666;
}
header a[aria-current]:before {
  position: absolute;
  content: "";
  width: 100%;
  height: 2px;
  background: #666;
  top: -17px;
  z-index: -1;
  left: 0;
}

.search form {
  margin: 0 auto 100px auto;
  width: clamp(200px, 500px, 90%);
  text-align: center;
}
.search form .search-field {
  position: relative;
}
.search form .search-field input {
  border: 1px solid #ccc;
  padding: 12px 20px;
  border-radius: 25px;
  font-size: inherit;
  width: 100%;
}
.search form .search-field button {
  background: none;
  border: none;
  position: absolute;
  top: 2px;
  right: 2px;
  height: 40px;
  width: 40px;
  border-radius: 36px;
  background: #fff;
}
.search form .search-field button i {
  color: #333;
}
.search form .search-field button:hover, .search form .search-field button:focus-visible {
  background: #e1e1e1;
}
.search ul.pre-queries {
  display: inline-flex;
  list-style-type: none;
  gap: 20px;
  padding-left: 0;
}
.search ul.pre-queries a {
  color: #666;
  font-size: 14px;
}
.search ul.pre-queries a:hover {
  text-decoration: underline;
}

.gallery h1 {
  font-family: "DM Serif Display", Helvetica, Arial, sans-serif;
  font-weight: normal;
  font-size: 30px;
}
.gallery ul {
  width: 100%;
  list-style: none;
  margin: 0;
  padding: 0;
}
@supports (grid-template-rows: masonry) {
  .gallery ul {
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-template-rows: masonry;
  }
}

.my-masonry-grid {
  display: flex;
  margin-left: calc(var(--gutter-size) * -1);
  /* gutter size offset */
  width: auto;
}

.my-masonry-grid_column {
  padding-left: var(--gutter-size);
  /* gutter size */
  background-clip: padding-box;
}
.my-masonry-grid_column li {
  display: block;
  margin-bottom: var(--gutter-size);
  position: relative;
  overflow: hidden;
  border-radius: 20px;
  -webkit-animation: photoFadeIn 0.3s ease-in;
          animation: photoFadeIn 0.3s ease-in;
  -webkit-animation-iteration-count: 1;
          animation-iteration-count: 1;
  -webkit-animation-fill-mode: forwards;
          animation-fill-mode: forwards;
}
.my-masonry-grid_column li:focus, .my-masonry-grid_column li:focus-visible, .my-masonry-grid_column li:focus-within {
  outline: 2px solid black;
  outline-offset: 2px;
}
.my-masonry-grid_column li:hover .photographer, .my-masonry-grid_column li:focus-visible .photographer, .my-masonry-grid_column li:focus-within .photographer {
  opacity: 1;
  visibility: visible;
}
.my-masonry-grid_column li:hover .photographer:before, .my-masonry-grid_column li:focus-visible .photographer:before, .my-masonry-grid_column li:focus-within .photographer:before {
  opacity: 1;
  visibility: visible;
}
@media screen and (max-width: 600px) {
  .my-masonry-grid_column li .photographer {
    opacity: 1 !important;
    visibility: visible !important;
  }
  .my-masonry-grid_column li .photographer span {
    visibility: hidden;
    opacity: 0;
  }
  .my-masonry-grid_column li .photographer a.download-photo {
    visibility: visible !important;
    opacity: 1 !important;
  }
}
.my-masonry-grid_column li a {
  width: 100%;
  display: block;
}
.my-masonry-grid_column li a img {
  width: 100%;
  display: block;
  cursor: zoom-in;
}
.my-masonry-grid_column li .photographer {
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  color: #fff;
  padding: 16px;
  display: inline-flex;
  justify-content: space-between;
  align-items: flex-end;
  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.7);
  pointer-events: none;
  transition: all 0.2s ease-in-out;
  z-index: 0;
  font-weight: 300;
  gap: 10px;
  opacity: 0;
  visibility: none;
}
.my-masonry-grid_column li .photographer:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 110%;
  bottom: 0;
  left: 0;
  background: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.5));
  z-index: -1;
  opacity: 0;
  transition: all 0.2s ease-in-out;
}
.my-masonry-grid_column li .photographer span {
  width: calc(100% - 54px);
}
.my-masonry-grid_column li .photographer a {
  color: #fff;
  font-weight: 500;
  pointer-events: auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
  display: block;
  overflow: hidden;
}
.my-masonry-grid_column li .photographer a.download-photo {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-shadow: none;
  width: 44px;
  height: 44px;
  min-width: 44px;
  text-align: center;
  border: none;
  border-radius: 10px;
  background: #fff;
  pointer-events: auto;
}
.my-masonry-grid_column li .photographer a.download-photo:hover, .my-masonry-grid_column li .photographer a.download-photo:focus-visible {
  background: #f1f1f1;
}
.my-masonry-grid_column li .photographer a.download-photo i {
  color: #333;
}

.load-more {
  background: #fff;
  color: #666;
  border: 1px solid #ccc;
  border-radius: 6px;
  padding: 15px 20px;
  display: block;
  margin: 0 auto 50px auto;
  font-family: inherit;
}

.error-msg {
  text-align: center;
  margin: 100px 0;
  color: #666;
}
.error-msg .emoji {
  font-size: 20px;
  margin-bottom: 0;
}

@-webkit-keyframes photoFadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes photoFadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.sr-only {
  border: 0 !important;
  clip: rect(1px, 1px, 1px, 1px) !important;
  /* 1 */
  -webkit-clip-path: inset(50%) !important;
  clip-path: inset(50%) !important;
  /* 2 */
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
  white-space: nowrap !important;
  /* 3 */
}

.modal {
  width: 100%;
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
  transition: all 0.3s ease-in-out;
  pointer-events: none;
  visibility: hidden;
  opacity: 0;
}
.modal .modal-box {
  transform: scale(0);
  transition: all 0.15s cubic-bezier(0.65, 0.05, 0.36, 1);
  position: relative;
  margin: 5vh auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  max-width: 600px;
  background: #fff;
  z-index: 101;
  pointer-events: all;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
  height: 90vh;
}
@media screen and (max-width: 600px) {
  .modal .modal-box {
    width: 90%;
    height: -webkit-max-content !important;
    height: -moz-max-content !important;
    height: max-content !important;
  }
}
.modal .modal-box .modal-img {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.modal .modal-box .modal-img img {
  width: inherit;
  max-height: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}
.modal.open {
  pointer-events: all;
  visibility: visible;
  opacity: 1;
}
.modal.open:before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.6);
  height: 100vh;
  width: 100vw;
}
.modal.open .modal-box {
  transform: scale(1);
}/*# sourceMappingURL=App.css.map */

